# polytope

./: CMakeLists.txt  README.md
cmake/: FindCDD.cmake
include/polytope/: DynamicStability.h  config.h  stability_margin.h
src/: CMakeLists.txt  DynamicStability.cpp  DynamicStability.h  MatrixDefs.cpp  MatrixDefs.h  MatrixDefsInternal.h
src/polytope/: CMakeLists.txt  DynamicStability.cpp  stability_margin.cpp
test/: CMakeLists.txt  main.cpp
